--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "Resume"
       href: Lin_Yang_Resume.pdf
+    - text: "Dashboard"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<ly2565cumc.columbia.edu>
     - icon: fa-github fa-lg
