edited plots on dashboard

--- a/_site.yml
+++ b/_site.yml
@@ -2,15 +2,17 @@ name: "Yay internet!"
 output_dir: "."
 navbar:
   title: "Home"
+  left:
+    - text: "Dashboard"
+      href: dashboard.html
+  
   right:
     - text: "Resume"
       href: Lin_Yang_Resume.pdf
-    - text: "Dashboard"
-      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<ly2565cumc.columbia.edu>
     - icon: fa-github fa-lg
       href: http://github.com/liny0907/
 output:
   html_document:
-    theme: cerulean
+    theme: lumen
